language_tests/outputs/invalid/deref.out
error: cannot dereference non-pointer/reference type 'int32'
 -> language_tests/source_files/invalid/deref.tr:5:12
	    let _ = *value
	            ^^^^^^
